--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -120,6 +120,10 @@ html, body{
   a{
     color:inherit;
     text-decoration: none;
+    cursor: pointer;
+  }
+  button{
+    cursor: pointer;
   }
 /* ####################################################   START navigation ##################################################################*/
 /* Add a black background color to the top navigation */
@@ -135,9 +139,10 @@ html, body{
     z-index: 3;
     top:0px;
     width:100%;
-    height:60px;
+    height:fit-content;
     padding-top:10px;
-    background-color:  hsl(216, 65%, 13%);
+    background-color:  hsl(216, 65%, 13%,95%);
+    backdrop-filter: blur(8px);
     display: block;
     transition: top 0.5s;
   }
@@ -207,7 +212,7 @@ button:hover{
     .topnav a:not(:first-child) {display: none;}
     .topnav a.icon {
       float: right;
-      display: flex;
+      display: inline-flex;
       height:50px;
       justify-content: center;
       align-items: center;
@@ -223,10 +228,12 @@ button:hover{
     .topnav.responsive {position: relative;}
     .topnav.responsive a.icon {
       position: absolute;
-      right: 0;
-      top: 0;
+      right: 16px;
+      top: 25px;
     }
-    .topnav.responsive a {
+    .topnav.responsive a:nth-child(2){margin-top: 13px;}
+    .topnav.responsive a:nth-child(3){margin-top: 13px;}
+    .topnav.responsive a{
       float: none;
       display: block;
       text-align: left;
@@ -258,7 +265,7 @@ button:hover{
   margin-bottom: 0px;
 }
 .container .container-item{
-  height:auto;
+  height:fit-content;
 }
 .flex_50 {
   flex:45%;
@@ -268,6 +275,9 @@ button:hover{
 }
 .flex_70{
   flex:65%;
+}
+#home p span::after{
+  content:' [ click the button below :) ]';
 }
 @media (max-width: 1500px) {
   .page_content{
@@ -343,15 +353,21 @@ button:hover{
       padding:0em;
       min-height: 20em;
   }
+  .h1{
+    font-size: small;
+  }
+  #home .hide-780{
+    visibility:hidden;
+  }
+  #home p span::after{
+    content:' [ device width is not large enough :( ]';
+  }
   /*make the project_main cards image as background */
 }
 
 @media (max-width: 600px) {
   .container .container-item{
     flex:100%;
-  }
-  .h1{
-    font-size: 2em;
   }
 }
 
@@ -422,45 +438,48 @@ table li::before {
   }
 /* ####################################################   STOP Work Experience ##################################################################*/
 /* ####################################################   START Project Main ##################################################################*/
-
+#myDIV { 
+  width: 400px;
+  height: 400px;
+  background-repeat: no-repeat, repeat;
+  background-image: url("img_tree.gif"), url("paper.gif");
+  background-blend-mode: lighten;
+}
 .project-img{
     position:relative;
-    width:100%;
-    height:22em;
+    width:auto;
+    height:fit-content;
     padding:15px;
     margin-top:2em;
+    background-image: linear-gradient(hsl(216, 65%, 11%,90%), hsl(216, 65%, 11%,90%)),url("https://images.unsplash.com/photo-1460925895917-afdab827c52f?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8M3x8d2Vic2l0ZXxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=500&q=60");
+  	background-clip: padding-box;
+    background-repeat: no-repeat;
+  	background-size: 60% 100%;
+    background-blend-mode: color;
+    text-align: right;
+  	align-content: right;
   }
-  .project-img img {
-    width:65%;
-    height:100%;
-    filter: grayscale(100%);
+  .project-img:hover{
+    background-image: url("https://images.unsplash.com/photo-1460925895917-afdab827c52f?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8M3x8d2Vic2l0ZXxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=500&q=60");
+  	background-blend-mode: normal;
   }
-  .img-left img{
-    float:left;
+  .img-left{
+  background-position:left;
   }
-  .img-right img{
-    float:right;
+  .img-right{
+  background-position:right;
   }
-  .project-img img:hover{
-    filter:grayscale(50%);
-  }
-.project-info {
-  padding:2em;
-  position:absolute;
-  top:0px;
-  height:100%;
-  width:60%;
-}
 .info-right{
+  padding-left:35%;
   text-align: right;
   align-content: right;
   right:0px;
 }
 .info-left{
+  padding-right:35%;
   text-align: left;
   left:0px;
 }
-
 .project-info .project-card_xl{
   display:block;
   border-radius: 4px;
@@ -490,12 +509,9 @@ table li::before {
   }
   .project-img{
     padding:0px;
+    background-size: 100% 100%;
   }
-  .project-img img {
-    width:100%;
-    filter:blur(0px);
-  }
-  
+
   .project-info .project-card_xl{
     display: contents;
   }
@@ -510,7 +526,7 @@ table li::before {
   padding:1.5em;
   font-size:16px;
   max-width:100%;
-  height: 15em;
+  height: 18em;
 }
 .project-card:hover h4{
   color:var(--high-color);
